--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
       </div>
     </main>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script defer src="js/app.js"></script>
+  <script defer src="js/script.js"></script>
   <script>
     window.addEventListener('load', function(){
         var allimages= document.getElementsByTagName('img');
