--- a/about.html
+++ b/about.html
@@ -3,24 +3,30 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Jessica's Portfolio</title>
+    <title>Jessica's Portfolio Projects</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Sansita&family=Source+Sans+Pro&display=swap" rel="stylesheet">
   </head>
 
   <body>
-  
       <nav>
           <a href="index.html">Home</a>
           <a href="projects.html">Projects</a>
           <a href="about.html">About Me</a>
       </nav>
-
     <main>
-      <div class="centered">
-        <header>Welcome to my portfolio!</header>
-        <h4>Hi my name is Jessica. I am an aspiring Web Developer based out of New York City. Feel free to view my projects.</h4>
-        <img src="https://25.media.tumblr.com/fc9f2e04d915e2f19bf99250463454d4/tumblr_mxx5fmGMIi1rrw6c0o1_500.gif"alt="Self-portrait>
+      <div id="about" class="flex-col">
+        <header>About Me</header>
+        <p class="define">I am a future web developer and a current student of the Software Engineering bootcamp at Thinkful. Coding is like a puzzle that needs solving and trial and error at times and that's why I love it. When a project is complete and perfected it is satisfying to see it come to life. One of my favorite things to do when coding is actually the debugging phase and getting feedback, being able to apply those implementations to see my pages, my work at the best it can be.
+        </p>
+        <p clss="define">Other activities I partake in other than coding are going on adventures with my pets, helping my nieces with their homework or just simply read to them. I am a learner and I love helping others learn. 
+        </p>
+        <p class="define">Currently I am looking for work and can be contacted by using the following links:</p>
+        <ul class="social">
+        <li><a class="social-links" href="https://github.com/jyip01" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a></li>
+        <li><a class="social-links" href="https://www.linkedin.com/in/jessica-yip-a15548150" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a></li>
+        <li><a class="social-links" href="mailto:jessica.f.yip@gmail.com"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a></li>
+        </ul>
       </div>
     </main>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
