--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -20,7 +20,7 @@
         <header>About Me</header>
         <p class="define">I am a future web developer and a current student of the Software Engineering bootcamp at Thinkful. Coding is like a puzzle that needs solving and trial and error at times and that's why I love it. When a project is complete and perfected it is satisfying to see it come to life. One of my favorite things to do when coding is actually the debugging phase and getting feedback, being able to apply those implementations to see my pages, my work at the best it can be.
         </p>
-        <p clss="define">Other activities I partake in other than coding are going on adventures with my pets, helping my nieces with their homework or just simply read to them. I am a learner and I love helping others learn. 
+        <p class="define">Other activities I partake in other than coding are going on adventures with my pets, helping my nieces with their homework or just simply read to them. I am a learner and I love helping others learn. 
         </p>
         <p class="define">Currently I am looking for work and can be contacted by using the following links:</p>
         <ul class="social">
