--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -21,7 +21,7 @@
       <div class="centered">
         <header>Welcome to my portfolio!</header>
         <h4>Hi my name is Jessica. I am an aspiring Web Developer based out of New York City. Feel free to view my projects.</h4>
-        <img src="https://25.media.tumblr.com/fc9f2e04d915e2f19bf99250463454d4/tumblr_mxx5fmGMIi1rrw6c0o1_500.gif"alt="Self-portrait>
+        <img src="https://25.media.tumblr.com/fc9f2e04d915e2f19bf99250463454d4/tumblr_mxx5fmGMIi1rrw6c0o1_500.gif" alt="Self-portrait">
       </div>
     </main>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
