--- a/projects.html
+++ b/projects.html
@@ -17,9 +17,9 @@
       </nav>
 
     <main>
-      <div class="projects">
+      <article class="projects">
         <header>Projects</header>
-        <div id="Project-1">
+        <section id="Project-1">
         <img src="RingQuiz.png" alt="RingQuiz Startup Page">
           
         <div class="card-block">
@@ -47,8 +47,8 @@
           </div>
           </div>
           </div>
-        </div>
-      </div>
+        </section>
+      </article>
     </main>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script defer src="js/script.js"></script>
