--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
       </article>
     </main>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script defer src="js/script.js"></script>
+  <script defer src="script.js"></script>
   <script>
     window.addEventListener('load', function(){
         var allimages= document.getElementsByTagName('img');
