--- a/projects.html
+++ b/projects.html
@@ -63,9 +63,10 @@
             <svg viewBox="0 0 128 128" data-name="css3" class="tech-icon">
               <path fill="#4b4b4b" d="M8.76 1l10.055 112.883 45.118 12.58 45.244-12.626 10.063-112.837h-110.48zm89.591 25.862l-3.347 37.605.01.203-.014.467v-.004l-2.378 26.294-.262 2.336-28.36 7.844v.001l-.022.019-28.311-7.888-1.917-21.739h13.883l.985 11.054 15.386 4.17-.004.008v-.002l15.443-4.229 1.632-18.001h-32.282999999999994l-.277-3.043-.631-7.129-.331-3.828h34.748999999999995l1.264-14h-52.926l-.277-3.041-.63-7.131-.332-3.828h69.281l-.331 3.862z"></path>
             </svg>
-            <svg viewBox="0 0 128 128" data-name="spotifyAPI" class="tech-icon">
+            <!--<svg viewBox="0 0 128 128" data-name="spotifyAPI" class="tech-icon">
               <path fill="#4b4b4b" d="..."></path>
-            </svg>
+            </svg>-->
+            <svg enable-background="new 0 0 24 24" height="512" viewBox="0 0 24 24" class= "tech-icon" width="512" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" fill="#4caf50" r="12"/><g fill="#212121"><path d="m16.872 17.656v.001c-.203 0-.329-.063-.518-.174-3.019-1.82-6.532-1.896-10.002-1.185-.189.049-.436.126-.576.126-.47 0-.765-.373-.765-.765 0-.499.295-.736.659-.813 3.963-.875 8.013-.798 11.467 1.268.295.189.47.358.47.798 0 .438-.344.744-.735.744z"/><path d="m18.175 14.483h-.001c-.252 0-.421-.111-.596-.203-3.025-1.79-7.533-2.512-11.545-1.423-.232.063-.358.126-.576.126-.518 0-.938-.421-.938-.938s.252-.861.75-1.001c1.345-.378 2.719-.659 4.732-.659 3.14 0 6.174.779 8.565 2.202.392.232.547.533.547.953-.005.521-.411.943-.938.943z"/><path d="m4.548 6.998c1.703-.499 3.61-.735 5.686-.735 3.532 0 7.234.735 9.939 2.313.378.218.624.518.624 1.093 0 .658-.533 1.127-1.122 1.127l-.001-.001c-.252 0-.407-.063-.625-.189-3.444-2.056-9.605-2.549-13.591-1.436-.175.048-.393.125-.625.125-.639 0-1.127-.499-1.127-1.142 0-.657.407-1.029.842-1.155z"/></g></svg>
           </section>
           <p class="card-text"> Albums4U allows any user to search an artist of their choice and display's those album's name and cover images back to them. Along with those attributes it also allows a user to click on the album cover and open up a new tab to that album in Spotify, where they can listen to it. Music is something that has kept me going through the hard times and easy ones. It is an out for many people, their minds drift away in the music, lyrics. On a daily basis I use Spotify to listen to my music and that is why I decided to create something using the Spotify API.</p>
           <section class="card-footer">
