--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
   
       <nav>
-          <a href="index.html">Home</a>
+          <a class ="home" href="index.html">Home</a>
           <a href="projects.html">Projects</a>
           <a href="about.html">About Me</a>
       </nav>
